@@ -1,13 +1,12 @@
 from AccessControl import ClassSecurityInfo
 from App.class_init import InitializeClass
 from Products.CMFCore.SkinsTool import SkinsTool as BaseTool
-from Products.CMFPlone import ToolNames
 from Products.CMFPlone.PloneBaseTool import PloneBaseTool
 
 
 class SkinsTool(PloneBaseTool, BaseTool):
 
-    meta_type = ToolNames.SkinsTool
+    meta_type = 'Plone Skins Tool'
     security = ClassSecurityInfo()
     toolicon = 'skins/plone_images/skins_icon.gif'
 
