@@ -1,21 +1,0 @@
-ActionsTool = 'Plone Actions Tool'
-CatalogTool = 'Plone Catalog Tool'
-SkinsTool = 'Plone Skins Tool'
-TypesTool = 'Plone Types Tool'
-UndoTool = 'Plone Undo Tool'
-URLTool = 'Plone URL Tool'
-WorkflowTool = 'Plone Workflow Tool'
-DiscussionTool = 'Plone Discussion Tool'
-RegistrationTool = 'Plone Registration Tool'
-PropertiesTool = 'Plone Properties Tool'
-MetadataTool = 'Plone Metadata Tool'
-SyndicationTool = 'Plone Syndication Tool'
-UtilsTool = 'Plone Utility Tool'
-FactoryTool = 'Plone Factory Tool'
-MigrationTool = 'Plone Migration Tool'
-CalendarTool = 'Plone Calendar Tool'
-ActionIconsTool = 'Plone Action Icons Tool'
-QuickInstallerTool = 'Plone QuickInstaller Tool'
-InterfaceTool = 'Portal Interface Tool'
-ControlPanelTool = 'Plone Control Panel Tool'
-TranslationServiceTool = 'Portal Translation Service Tool'
