@@ -1,12 +1,11 @@
 from Products.CMFCore.UndoTool import UndoTool as BaseTool
-from Products.CMFPlone import ToolNames
 from AccessControl import ClassSecurityInfo
 from App.class_init import InitializeClass
 from Products.CMFPlone.PloneBaseTool import PloneBaseTool
 
 class UndoTool(PloneBaseTool, BaseTool):
 
-    meta_type = ToolNames.UndoTool
+    meta_type = 'Plone Undo Tool'
     security = ClassSecurityInfo()
     toolicon = 'skins/plone_images/undo_icon.gif'
 
